Fixed small error in code comment

--- a/fit_linear_model.ipynb
+++ b/fit_linear_model.ipynb
@@ -4978,8 +4978,8 @@
     "\n",
     "# The total distortion level combines nonlinear and noise distortions. The fact that the\n",
     "# BLA residual is close to this level shows that the BLA captures nearly all behaviour a\n",
-    "# linear model can. Reducing the gap between the total distortion and noise distortion\n",
-    "# levels would require introducing a nonlinear model."
+    "# linear model can. Reducing the gap between the model residual and noise distortion\n",
+    "# level would require introducing a nonlinear model."
    ]
   }
  ],
